--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "__MSG_appName__",
-  "version": "5.5.2",
+  "version": "1.0.0",
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
   },
-  "default_locale": "en",
+  "default_locale": "ru",
   "permissions": [
     "https://www.chess.com/"
   ],
@@ -29,6 +29,6 @@
     }
   ],
   "web_accessible_resources": [
-    "build.js"
+    "build.js", "audios/*.mp3"
   ]
 }
