--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "__MSG_appName__",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
   },
-  "default_locale": "ru",
+  "default_locale": "pt_BR",
   "permissions": [
     "https://www.chess.com/"
   ],
